app/css/playlist.css
/* overall styles */
* {
	padding: 0px;
	margin: 0px;
}

body {
	background-color: #fff;
	font-family: Helvetica Neue, Helvetica, sans-serif;
}

#container{
	width: 100%;
	/* Firefox */
	height: -moz-calc(100vh - 30px);
	/* WebKit */
	height: -webkit-calc(100vh - 30px);
	/* Opera */
	height: -o-calc(100vh - 30px);
	/* Standard */
	height: calc(100vh - 30px);
	/*background-color: green; Testing purposes only*/
}

::-webkit-scrollbar { 
    display: none; 
}

#leftAlign{
	width: 65%;
	/* Firefox */
	height: -moz-calc(100vh - 30px);
	/* WebKit */
	height: -webkit-calc(100vh - 30px);
	/* Opera */
	height: -o-calc(100vh - 30px);
	/* Standard */
	height: calc(100vh - 30px);
	float: left;
	/*background-color: #ffaabb; Testing purposes only*/
	overflow: auto;
}

#rightAlign{
	width: 35%;
	/* Firefox */
	height: -moz-calc(100vh - 30px);
	/* WebKit */
	height: -webkit-calc(100vh - 30px);
	/* Opera */
	height: -o-calc(100vh - 30px);
	/* Standard */
	height: calc(100vh - 30px);
	float: right;
	/*background-color: blue; Testing purposes only*/
}

/* Top Bar */
#header {
	width: 100%;
	position: relative;
	top: 0px;
	left: 0px;
	background-color: black;
	font-color: #fff;
	height: 30px;
}
#logout {
	position: absolute;
	top: 0px;
	right: 0px;
}

/*a:link, visited, over, active {
	font-size: 24px;
    color: white;
    text-decoration: none;
}*/

#right_bar {
	/*position: absolute;*/
	right: 0;
	/*width: 450px;*/
	height: 1000px;
}

#content {
	margin: 0 auto;
	width: 100%;
	height: 100%;
	min-height: 500px;
	background-color: white;
}

/* left in hour block */
#leftInHour {
	padding: 5px;
	height: calc(15vh - 10px);
	width: calc(100% - 10px);
	background-color: #c04931;
	color: black;
	/*position: relative;*/
	right: 0px;
	float: right;
	text-align: center;
	font-size: 0.9em;
}

#leftInHour #timeLeftInHour{
	font-size: 2.0em;
	text-shadow:
	   -2px -2px 0 #fff,  
	    2px -2px 0 #fff,
	    -2px 2px 0 #fff,
	     2px 2px 0 #fff;
}

/* current box */
#currentlyPlaying {
	padding: 5px;
	width: calc(100% - 10px);
	height: calc(40vh - 10px);
	background-color: black;
	color: white;
	/*position: relative;*/
	right: 0px;
	float: right;
	text-align: center;
}

#currentlyPlaying #currentlyPlayingHeader{
	text-align: left;
	color: #c04931;
	font-weight: bold;
}

#currentlyPlaying #songName{
	padding: 10px;
}

#currentlyPlaying #artistAlbum{
	padding: 5px;
	margin-bottom: 10px;
}

#currentlyPlaying #timeLeft{
	padding: 5px;
	border: 1px solid #c04931;
	width: 40%;
	margin: 0 auto;
}

/* hot buttons */
#hotButtons {
	padding: 3px;
	border-bottom: 2px solid black;
	height: calc(10vh - 7px);
	width: calc(100% - 6px);
	background-color: white;
	/*position: relative;*/
	right:0px;
	float: right;
}

/* Notifications */
#notifications {
	padding: 5px;
	width: calc(100% - 10px);
	height: calc(30vh - 10px);
	right: 0px;
	float: right;
	background-color: white;
}

/* Playlist */
#playlist {
	left: 0;
	font-size: 1.0em;
}

#playlist ol{
	list-style-type: none;
}

#playlist li {
	border-bottom: 2px solid black;
	border-right: 1px solid black;
	border-left: 1px solid black;
	padding: 5px;
}

#playlist .notYetPlayed{
	background-color: #35C959;
}

#playlist .currentlyPlaying{
	background-color: #62B8F5;
}

#playlist .alreadyPlayed{
	background-color: #808080;
}

#playlist h2{
	font-size: 1.3em;
	padding-bottom: 3px;
}

#playlist .artistInList{
	font-weight: bold;
}

#playlist .albumInList{
	font-weight: bold;
}

#playlist .timeInSong{
	float: right;
	font-size: 1.2em;
	margin-top: 10px;
}

/*/* Progress Bar */
.progress-bar {
    background-color: #1a1a1a;
    height: 10px;
    width: 90%;
    padding: 2px;
    margin: 0 auto;
    margin-top: 10px;      
    border-radius: 5px;
    box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;    
    text-align: center;    
}

.progress-bar span {
    display: inline-block;
    height: 90%;
    border-radius: 3px;
    box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
    transition: width .4s ease-in-out;    
    float: left;
}
.blue span {
    background-color: #34c2e3;   
}

.orange span {
      background-color: #fecf23;
      background-image: linear-gradient(top, #fecf23, #fd9215);  
}   

.green span {
      background-color: #a5df41;
      background-image: linear-gradient(top, #a5df41, #4ca916);  
}

.stripes span {
    background-size: 30px 30px;
    background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%,
                        transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%,
                        transparent 75%, transparent);            
    
    animation: animate-stripes 3s linear infinite;             
}

@keyframes animate-stripes {
    0% {background-position: 0 0;} 100% {background-position: 60px 0;}
}
*/

